--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,11 +1,6 @@
 .formGroup {
   display: flex;
-  flex-direction: column;
-  font-family: Poppins;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  flex-direction: row;
 }
 
 .inputGroup {
@@ -15,28 +10,22 @@
   box-shadow: 4px 4px 0px 0px #000;
   width: 31.25rem;
   height: 5.125rem;
-  flex-shrink: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .input {
-  border-top-left-radius: 45px;
-    border-bottom-left-radius: 45px;
-    height: 82px;
-    width: 70%;
-    box-sizing: border-box;
-    padding-left: 32px;
-    font-size: 20px;
-    border: 2px solid black;
-    box-shadow: 0px 2px 0px 1px #000000;
+  height: 82%;
+  width: 70%;
+  border: none;
+  font-size: 20px;
 }
 
-.input:focus{
+.input:focus {
   outline: none;
 }
-
 
 .inputImg {
   width: 1.5rem;
@@ -45,16 +34,15 @@
 
 .button {
   border-top-right-radius: 45px;
-    border-bottom-right-radius: 45px;
-    height: 82px;
-    width: 30%;
-    box-sizing: border-box;
-    border: 2px solid black;
-    font-size: 20px;
-    color: #000000;
-    box-shadow: 2px 2px 0px 1px #000000;
-    cursor: pointer;
-    background-color: #c4c4c4;
+  border-bottom-right-radius: 45px;
+  width: 30%;
+  box-sizing: border-box;
+  border: 2px solid black;
+  font-size: 20px;
+  color: #000000;
+  box-shadow: 2px 2px 0px 1px #000000;
+  cursor: pointer;
+  background-color: #c4c4c4;
 }
 
 .button:hover {
@@ -76,20 +64,20 @@
 
 @media screen and (max-width: 800px) {
   .alert {
-      margin: 48px 0;
+    margin: 48px 0;
   }
   .inputGroup input {
-      display: block;
-      width: 100%;
-      border-radius: 45px;
-      box-shadow: 0px 2px 0px 1px #000000;    
-      margin-bottom: 18px;
+    display: block;
+    width: 100%;
+    border-radius: 45px;
+    box-shadow: 0px 2px 0px 1px #000000;
+    margin-bottom: 18px;
   }
   .inputGroup button {
-      display: block;
-      margin-top: 16px;
-      margin: 0 auto;
-      width: 220px;
-      border-radius: 45px;
+    display: block;
+    margin-top: 16px;
+    margin: 0 auto;
+    width: 220px;
+    border-radius: 45px;
   }
 }
